# Deinserter

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXPANSION_PLAN.md
src/deinserter/: __init__.py  assembly.py  builtin_formats.toml  classification.py  cli.py  containers.py  detectors.py  formats.py  gpak.py  manifests.py  models.py  parsers.py  pipeline.py  processors.py  registry.py  resources.py  semantic.py  stream_scanner.py  utils.py
src/deinserter/unity/: __init__.py  bundle.py  index.py  lz4.py  reconstruct.py  serialized.py
tests/: test_deinserter.py
