[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deinserter"
dynamic = ["version"]
description = "Local API for safe asset triage, extraction, and reconstruction."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Deinserter" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
dependencies = [
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
deinserter = "deinserter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deinserter = ["builtin_formats.toml"]

[tool.setuptools.dynamic]
version = { attr = "deinserter._version.VERSION" }
